# email-triage-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
email-triage-env/: .huggingface.yaml  Dockerfile  README.md  requirements.txt
email-triage-env/env/: server.py
email-triage-env/env/tasks/: __init__.py  task1_easy.py
email-triage-env/tests/: test_all.py
env/: __init__.py  data.py  environment.py  models.py  server.py
env/tasks/: __init__.py  task1_easy.py  task1easy.py  task2_medium.py  task3_hard.py
server/: app.py
