[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv-compliant email triage environment for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "dishu1999"}
]
keywords = ["openenv", "reinforcement-learning", "email", "agent"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "requests>=2.31.0",
    "openai>=2.7.2",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/dishu1999/email-triage-env"
Repository = "https://github.com/dishant-kaushik/email-triage-env"
